--- a/color.css
+++ b/color.css
@@ -2,13 +2,23 @@
     margin : 10px;
 }
 
+
+
 canvas{
     border:1px solid transparent;
     border-image: linear-gradient(to bottom right, #b827fc 0%, 
     #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
     border-image-slice: 1;
-   
+    margin : 0px;
 }
+
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
 
 footer{
     position: absolute;
